Fix styling login page header and footer behind content.

--- a/app/assets/stylesheets/plain.scss
+++ b/app/assets/stylesheets/plain.scss
@@ -20,6 +20,7 @@
         justify-content: center;
         height: 80px;
         flex-grow: 0;
+        z-index: -999;
     }
     .main {
         flex-grow: 2;
